🏆🚕 Checkpoint ./static/style.css:10221761/3338 ./views/claims.ejs:10221761/1500

--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
 /* Modal Content - need quite a bit of overrides to combat bootstraps natural setting */
@@ -15,10 +15,9 @@
   background-color: #fefefe;
   margin: auto;
   padding: 30px;
-  width: 55%!important;
+  width: 55% !important;
   text-align: center;
 }
-
 
 /* The Close Button */
 .close {
@@ -37,44 +36,23 @@
   text-align: right;
 }
 
-
 .clickable-row {
   background: none;
-/* 	color: yellow; */
-	border: none;
+  /* 	color: yellow; */
+  border: none;
   width: 100%;
   height: 100%;
   text-align: left;
-	padding: 0;
-	font: inherit;
-	cursor: pointer;
-	outline: inherit;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
 }
-
 
 .dropdown {
-  float: right;
-  position: relative;
-  display: inline-block;
+  top: 0px;
+  left: 0px;
+  z-index: 3;
+  position:absolute;
 }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  right: 0;
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-
-.show {display: block;}
