😋🍡 Checkpoint ./views/claims.ejs:10221761/429 ./static/style.css:10221761/90 ./README.md:10221761/247

--- a/static/style.css
+++ b/static/style.css
@@ -49,10 +49,10 @@
   outline: inherit;
 }
 
-.dropdown {
+.dropdown, .dropdown-menu" {
   top: 0px;
   left: 0px;
-  z-index: 3;
-  position:absolute;
+  position: relative;
+  z-index: 10000;
 }
 
