--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -45,9 +45,9 @@
           <button class="dropdown-toggle" type="button" data-toggle="dropdown">Edit
           <span class="caret"></span></button>
           <ul class="dropdown-menu">
-            <li><a href="#">HTML</a></li>
-            <li><a  href="#">CSS</a></li>
-            <li><a href="#">JavaScript</a></li> 
+            <li><a href="#">Resolve</a></li>
+            <li><a  href="#">Re-open</a></li>
+            <li><a href="#">Edit</a></li> 
           </ul>
         </div>
       </td>
