--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -45,10 +45,13 @@
             <% if (result.resolution==='unresolved') { %>
             <li><a href="#">Resolve</a></li>
             <%}%>
-            <% if (result.status==='closed') { %>
+            <% if (result.status==='Closed') { %>
             <li><a href="#">Re-open</a></li>
             <%}%>
-            <li><a href="#">Edit</a></li> 
+            <% if (result.resolution!='unresolved' & result.status==='Open' ) {%>
+            <li><a href="#">Close</a></li>
+            <%}%>
+            <li><a href="#">Edit Claim</a></li> 
           </ul>
         </div>
       </td>
