--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -46,12 +46,12 @@
             <li><a href="#">Resolve</a></li>
             <%}%>
             <% if (result.status==='Closed') { %>
-            <li><a href="#">Re-open</a></li>
+            <li><a href="">Re-open</a></li>
             <%}%>
             <% if (result.resolution!='unresolved' & result.status==='Open' ) {%>
             <li><a href="#">Close</a></li>
             <%}%>
-            <li><a href="#">Edit Claim</a></li> 
+            <li><a href='claims/edit/<%=resolution.claimid%>'>Edit Claim</a></li> 
           </ul>
         </div>
       </td>
