🍱👙 Checkpoint ./views/products.ejs:10221761/79 ./routes/views.js:10221761/108 ./views/claims.ejs:10221761/832

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -32,7 +32,7 @@
       <h2 id="name" >Product Name</h2>
       <p id="description">Product description</p>
       <form id="claimsBtn" method="get">
-        <button type="submit" id="claims">View Claims</button>
+        <button type="submit" id="claims">View Claims for this product</button>
       </form>
      <p id="noclaims">No claims for this product</p>
     </div>
