🌖🍘 Checkpoint ./views/claims.ejs:10221761/2874 ./views/partials/claim-edit.ejs:10221761/1372 ./views/partials/dropdown.ejs:10221761/779 ./views/partials/dropdown.ejs copy:10221761/759 ./views/product-claims.ejs:10221761/718 ./routes/views.js:10221761/7

--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -41,7 +41,7 @@
             <% if (result.resolution!='unresolved' & result.status==='Open' ) {%>
             <li><a href="#">Close</a></li>
             <%}%>
-            <li><a href='claims/edit/<%=result.claimid%>'>Edit Claim</a></li> 
+            <li><a href='/edit/<%=result.claimid%>'>Edit Claim</a></li> 
           </ul>
         </div>
       </td>
