--- a/views/product-claims.ejs
+++ b/views/product-claims.ejs
@@ -7,6 +7,7 @@
 <table class="table">
   <thead>
     <tr>
+      <th></th>
       <th>Customer</th>
       <th>Issue</th>
       <th>Status</th>
@@ -23,6 +24,22 @@
   <% var dateClosed = new Date(result.dateopened) %>
   <% var dateClosed= dateClosed.getDate() + "/" +  (dateClosed.getMonth()+1) + "/" + dateClosed.getFullYear() %>
     <tr>
+      <td><div class="dropdown">
+          <button class="dropdown-toggle" type="button" data-toggle="dropdown">Edit
+          <span class="caret"></span></button>
+          <ul class="dropdown-menu">
+            <% if (result.resolution==='unresolved') { %>
+            <li><a href="#">Resolve</a></li>
+            <%}%>
+            <% if (result.status==='Closed') { %>
+            <li><a href="">Re-open</a></li>
+            <%}%>
+            <% if (result.resolution!='unresolved' & result.status==='Open' ) {%>
+            <li><a href="#">Close</a></li>
+            <%}%>
+            <li><a href='/edit/<%=result.claimid%>'>Edit Claim</a></li> 
+          </ul>
+        </div></td>
       <td><%=result.customer%></td>
       <td><%=result.issue%></td>
       <td><%=result.status%></td>
