🌒🌴 Checkpoint ./README.md:10221761/23 ./routes/api.js:10221761/93 ./routes/views.js:10221761/2542 ./views/partials/claim-edit.ejs:10221761/927

--- a/views/partials/claim-edit.ejs
+++ b/views/partials/claim-edit.ejs
@@ -67,14 +67,17 @@
   
   <% if (locals.resolutions) { %>  
   <div>
-   <b>Resolution: </b>
-    <p>
-      <% resolutions.forEach(resolution=>{ %>
-        <%=resolution.description%>-<%=result.employee%>
-      <%})%>
-    </p>
+    <b>Resolution: </b>
+    <select id="resolutionList">
+       <!--  keeping the selected letter visible in dropdown box -->
+        <option value="" disabled selected hidden><%=result.resolution%> </option>
+        <% resolutions.forEach(resolution=>{ %>
+        <option value='<%=resolution.name%>'><%=resolution.name%></option>
+        <% } )%>
+    </select>
   </div>
-  <%}%>
+  <% } %>
+ 
   
   <div>
     <b>Date Opened: </b>
