--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -4,7 +4,7 @@
 <h1>
   Claims
 </h1>
-
+create claims, edit and resolve claims, email techs any questions about claims
 <%- include("partials/claim-edit") %>
 
 <table class="table table-hover">
